# tjalerts

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  PRODUCT.md  docker-compose.yml  manage.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  skills-lock.json  tailwind.config.js
.agents/skills/brandkit/: SKILL.md
.agents/skills/design-taste-frontend-v1/: SKILL.md
.agents/skills/django-q2/: SKILL.md
.agents/skills/imagegen-frontend-mobile/: SKILL.md
.cursor/rules/: backend.mdc
.github/workflows/: deploy-workers.yml  deploy.yml
api/: schemas.py  views.py
blog/: models.py  tasks.py  urls.py  views.py
blog/migrations/: 0003_blogpost_tags.py
blog/templatetags/: blog_post_extras.py
deployment/: Dockerfile.server  Dockerfile.workers  entrypoint.sh
docs/: production-data-changes.md
frontend/src/application/: index.js
frontend/src/controllers/: filter_controller.js  loading_controller.js  search_and_select_controller.js  select_technology_controller.js  select_title_controller.js  similar_posts_controller.js
frontend/src/styles/: index.css
frontend/webpack/: webpack.config.dev.js  webpack.config.prod.js
hn_jobs/: adapters.py  asgi.py  settings.py  sitemaps.py  tests.py  urls.py  utils.py  wsgi.py
hn_jobs/settings/: base.py  local.py  production.py
jobs/: choices.py  enrichment.py  filters.py  forms.py  models.py  queries.py  tasks.py  tests.py  urls.py  utils.py  views.py
jobs/migrations/: 0011_alter_post_who_is_hiring_comment_id.py  0012_post_max_salary_post_min_salary.py  0013_post_currency.py  0015_auto_20231119_1035.py  0015_post_vector.py  0016_post_vector.py  0017_alter_post_options_and_more.py  0019_auto_20231229_1146.py  0021_post_original_text.py  0022_alter_post_vector.py  0023_post_vector_index.py  0024_post_source.py  0026_rename_jobs_post_titles.py  0027_rename_jobs_compan_name_2a74f5_idx_index_company_name_and_more.py  0028_post_index_post_submitted_datetime.py  0029_post_vectors_index_2.py  0030_alter_post_source.py  0032_remove_company_emails_index.py  0033_post_page_context.py  0034_add_generic_post_source_identity.py
jobs/templatetags/: alert_extras.py  markdown_extras.py  post_extras.py
pages/: tasks.py  urls.py  views.py
snippets/: populate_meilisearch.py
templates/: base.html  robots.txt
templates/account/: alert-email.html  email_confirm.html  login.html  logout.html  settings.html  signup.html
templates/account/components/: general.html  personal-information-form.html
templates/blog/: blog-post-detail.html  blog-post-list.html  highest-paid-blog-post-list.html  highest-paid-jobs.html
templates/components/: email-not-verified.html  job-posting.html  messages.html  simple-alert-form.html  small-job-posting.html  technology-link.html  title-link.html
templates/jobs/: alert-email.html  all_jobs.html  authed_weekly_digest.html  companies-with-jobs.html  company-jobs.html  create-alert.html  create-custom-alert.html  highest-paid-job.html  post_detail.html  subscription-confirmation.html  technologies-with-jobs.html  technology-jobs.html  title-jobs.html  titles-with-jobs.html  toggle_subscription_from_authed_alert.html  trigger_task.html  unauthed_weekly_digest.html  unsubscribe_from_unauthed_alert.html
templates/pages/: admin-panel.html  home.html  pricing.html  privacy_policy.html  product_hunt.html  support.html  tos.html  uses.html
templates/socialaccount/: login.html
users/: models.py  schedules.py  tasks.py  urls.py  views.py
users/migrations/: 0004_alert.py  0006_subscriber_owner.py
utils/: constants.py  scripts.py  tasks.py  tests.py
utils/templatetags/: date_utils.py  url_utils.py
(+2 files in other folders)
