[tool.poetry]
name = "hn_jobs"
version = "0.1.0"
description = "List of HackerNews Developers"
authors = ["Rasul Kireev <me@rasulkireev.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django-allauth = "^0.50.0"
python-webpack-boilerplate = "^1.0.0"
django-widget-tweaks = "^1.4.12"
django-environ = "^0.10.0"
django-model-utils = "^4.3.1"
croniter = "^1.3.8"
httpx = "^0.23.3"
django-autoslug = "^1.9.8"
markdown = "^3.4.1"
gunicorn = "^20.1.0"
pillow = "^9.4.0"
django-extensions = "^3.2.1"
django-filter = "^22.1"
django-anymail = {extras = ["mailgun"], version = "^9.1"}
pygments = "^2.14.0"
whitenoise = "^6.4.0"
django = "^4.1.7"
django-ninja = "^0.21.0"
django-q2 = "^1.5.4"
redis = "^4.6.0"
django-mjml = "^1.1"
django-storages = {extras = ["s3"], version = "^1.14.2"}
sentry-sdk = {extras = ["django"], version = "^1.32.0"}
pgvector = "^0.2.3"
kolo = "^2.6.0"
django-debug-toolbar = "^4.2.0"
posthog = "^3.0.2"
ipython = "^8.19.0"
openai = "^1.10.0"
opentelemetry-exporter-otlp = "^1.24.0"
opentelemetry-distro = "^0.45b0"
opentelemetry-instrumentation-django = "^0.45b0"
opentelemetry-api = "^1.24.0"
opentelemetry-sdk = "^1.24.0"
opentelemetry-instrumentation-psycopg2 = "^0.45b0"
opentelemetry-instrumentation-redis = "^0.45b0"
opentelemetry-instrumentation-logging = "^0.45b0"
psycopg2 = "^2.9.9"
structlog = "^24.1.0"
django-structlog = "^8.0.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
pylint-django = "^2.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "django"
combine_as_imports = true
include_trailing_comma = true
line_length = 120
multi_line_output = 3

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'

[tool.djlint]
profile="django"
ignore = "H031,H006,H023"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E402", "F601"]
