[tool.poetry]
name = "hn_jobs"
version = "0.1.0"
description = "List of HackerNews Developers"
authors = ["Rasul Kireev <me@rasulkireev.com>"]

[tool.poetry.dependencies]
python = "^3.10"
croniter = "^1.3.8"
django = "^4.1.7"
django-allauth = "^0.50.0"
django-anymail = {extras = ["mailgun"], version = "^9.1"}
django-autoslug = "^1.9.8"
django-debug-toolbar = "^4.2.0"
django-environ = "^0.10.0"
django-extensions = "^3.2.1"
django-filter = "^22.1"
django-mjml = "^1.1"
django-model-utils = "^4.3.1"
django-storages = {extras = ["s3"], version = "^1.14.2"}
django-structlog = "^8.0.0"
django-widget-tweaks = "^1.4.12"
gunicorn = "^20.1.0"
ipython = "^8.19.0"
markdown = "^3.4.1"
pgvector = "^0.2.3"
pillow = "^9.4.0"
posthog = "^3.0.2"
psycopg2 = "^2.9.9"
pygments = "^2.14.0"
python-webpack-boilerplate = "^1.0.0"
redis = "^4.6.0"
structlog = "^24.1.0"
tqdm = "^4.66.4"
whitenoise = "^6.4.0"
logfire = "^3.12.0"
pydantic-ai = "^0.0.48"
httpx = "^0.28.1"
django-ninja = "^1.4.0"
sentry-sdk = "^2.41.0"
structlog-sentry = "^2.2.1"
django-q2 = {extras = ["sentry"], version = "^1.8.0"}

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
pylint-django = "^2.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "django"
combine_as_imports = true
include_trailing_comma = true
line_length = 120
multi_line_output = 3

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'

[tool.djlint]
profile="django"
ignore = "H031,H006,H023,H011"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E402", "F601"]
